# rtls-stream-visualizer

./: README.md  pyproject.toml
config/: settings.yaml
core/: config.py  logging_config.py  validate.py
core/udp/: client.py
stream_generator/: main.py  validate.py
tests/: conftest.py
tests/core/udp/: test_client.py
tests/core/validate/: test_validate.py
tests/core/validate/static/: test_json_schema.json
tests/core/validate/static/test_invalid_json_lines/: lines.jsonl
tests/core/validate/static/test_invalid_json_lines_with_partial_object/: lines.jsonl
tests/core/validate/static/test_invalid_json_lines_with_schema_error/: lines.jsonl
tests/core/validate/static/test_valid_json_lines/: lines.jsonl
tests/stream_generator/validate/: test_validate.py
tests/stream_generator/validate/static/: test_json_schema.json
tests/stream_generator/validate/static/test_invalid_json_lines/: lines.jsonl
tests/stream_generator/validate/static/test_invalid_json_lines_with_partial_object/: lines.jsonl
tests/stream_generator/validate/static/test_invalid_json_lines_with_schema_error/: lines.jsonl
tests/stream_generator/validate/static/test_valid_json_lines/: lines.jsonl
