[project]
name = "rtls-stream-visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Drugov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=26.1.0,<27.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "typer (>=0.21.1,<0.22.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
packages = [
    { include = "core" },
    { include = "stream_generator" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
